Name: elm-make
Version: 0.2

Synopsis:
    A build tool for Elm projects
Description:
    A nice way to build projects that is aware of both elm-compile and
    elm-package, so it can make the build process very smooth.

Homepage:
    http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2014 Evan Czaplicki

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-make.git

Executable elm-make

    ghc-options:
        -threaded -O2 -W

    hs-source-dirs:
        src

    Main-is:
        Main.hs

    other-modules:


    Build-depends:
        aeson >= 0.7 && < 0.9,
        aeson-pretty >= 0.7 && < 0.8,
        ansi-wl-pprint,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        blaze-html,
        blaze-markup,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        elm-compiler >= 0.15.1 && < 0.16,
        filepath >= 1 && < 2.0,
        HTTP >= 4000.2.5 && < 4000.3,
        http-client >= 0.4.15 && < 0.5,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        mtl >= 2.2.1 && < 3,
        network >= 2.4 && < 2.7,
        optparse-applicative >=0.11 && <0.12,
        process,
        time,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.12,
        zip-archive
